examples/test/testpolicy16418.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16418
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key22: value36
      key18: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value16
          key3: value38
      podSelector:
        matchLabels:
          key5: value35
